[metadata]
name = vnpy_longbridge
version = 1.0.0
url = https://github.com/BrokerQL/vnpy_longbridge
license = Apache 2.0
author = Pan Jiabang
author_email = panjiabang@gmail.com
description = LongBridge gateway for VeighNa quant trading framework.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    quant
    quantitative
    investment
    trading
    algotrading
classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Office/Business :: Financial :: Investment
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: MIT License
    Natural Language :: Chinese (Simplified)

[options]
packages = find:
zip_safe = False
python_requires = >=3.7
install_requires = longport
